# pulumi-minio

./: .ci-mgmt.yaml  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  CHANGELOG.md  CHANGELOG_OLD.md  Makefile  README.md  mise.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main-post-build.yml  master.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  upgrade-provider.yml  verify-release.yml
docs/: _index.md
examples/: examples_dotnet_test.go  examples_go_test.go  examples_nodejs_test.go  examples_py_test.go  go.mod  go.sum
provider/: go.mod  go.sum  resources.go
scripts/: plugins.mk
sdk/: go.mod  go.sum
sdk/dotnet/: IamGroup.cs  KmsKey.cs  (+23 more)
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_minio/: README.md  __init__.py  _inputs.py  get_iam_policy_document.py  iam_group.py  iam_group_membership.py  iam_group_policy.py  iam_group_policy_attachment.py  iam_group_user_attachment.py  iam_policy.py  iam_service_account.py  iam_user.py  iam_user_policy_attachment.py  ilm_policy.py  kms_key.py  outputs.py  provider.py  pulumi-plugin.json  s3_bucket.py  s3_bucket_notification.py  s3_bucket_policy.py  s3_bucket_replication.py  s3_bucket_server_side_encryption.py  s3_bucket_versioning.py  s3_object.py
sdk/python/pulumi_minio/config/: __init__.pyi  vars.py
testing/: docker-compose.yml
(+179 files in other folders)
